--- a/options.html
+++ b/options.html
@@ -2,9 +2,9 @@
 <html>
 <head>
     
-    <title>TOSSafe Extension Options</title>
+    <title>monkaTOS Twitch Log-in</title>
     
-    <link rel="stylesheet" href="bootstrap.min.css">
+    <link rel="stylesheet" href="dependencies/bootstrap.min.css">
     <link rel="stylesheet" href="options.css">
 
 </head>
@@ -16,7 +16,7 @@
 
 
 
-<script src="jquery-3.5.1.min.js"></script>
+<script src="dependencies/jquery-3.5.1.min.js"></script>
 
 <script src="options.js"></script>
 
