--- a/popup.html
+++ b/popup.html
@@ -1,17 +1,24 @@
-  <!DOCTYPE html>
-  <html>
-    <head>
-      <title>Cool Popup</title>
-      <style>
-        button {
-          height: 30px;
-          width: 30px;
-          outline: none;
+<!DOCTYPE html>
+<html>
+
+<head>
+    <title>Cool Popup</title>
+    <style>
+        body {
+            min-width: 100px;
+            max-width: 100px;
         }
-      </style>
-      <script src="popup.js"></script>
-    </head>
-    <body>
-      <p>Right click me and click options to sign in!</p>
-    </body>
+        button {
+            height: 30px;
+            width: 30px;
+            outline: none;
+        }
+    </style>
+    <script src="popup.js"></script>
+</head>
+
+<body>
+    <p>Right click me and click options to sign in!</p>
+</body>
+
 </html>
