--- a/src/popup.html
+++ b/src/popup.html
@@ -4,18 +4,18 @@
         <title>Cool Popup</title>
         <style>
          body {
-             min-width: 100px;
-             max-width: 100px;
+             min-width: 200px;
+             max-width: 200px;
+             min-height: 80px;
+             max-height: 80px;
          }
-         button {
-             height: 30px;
-             width: 30px;
-             outline: none;
+         #button {
+            white-space: nowrap;
          }
         </style>
     </head>
 
     <body>
-        <p>Right click me and click options to sign in!</p>
+        <p id="button"><button class="btn btn-info" id='signin'>Sign in with Twitch!</button></p>
     </body>
 </html>
