--- a/src/options.html
+++ b/src/options.html
@@ -5,10 +5,8 @@
     </head>
     <body>
 
-        <div class="flex-center">
-            <p><button class="btn btn-primary" id='signin'>Sign in with Twitch!</button></p>
-        </div>
-
+        <p id="button"><button class="btn btn-info btn-lg" id='signin'>Sign in with Twitch!</button></p>
+        
 
     </body>
 </html>
