remaking options page

--- a/src/options.html
+++ b/src/options.html
@@ -1,11 +1,49 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+
         <title>MonkaTOS Twitch Log-in</title>
     </head>
     <body>
+        <div class="card text-center centered" style="height: 50rem; width: 30rem">
+            <div class="card-header">
+                TwitchTOS Quick Tutorial
+            </div>
+            <div class="card-body">
+              <h5 class="card-title">TwitchTOS Quick Tutorial</h5>
+              <div id="carouselExampleControls" class="carousel slide" data-interval="false" data-keyboard="true">
 
-        <p id="button"><button class="btn btn-info btn-lg" id='signin'>Sign in with Twitch!</button></p>
+                <div class="carousel-inner" >
+                  <div class="carousel-item active">
+                    <img class="d-block w-100" src="https://i.redd.it/yhutgo0ay9451.jpg"
+                      alt="First slide">
+                </div>
+                <div class="carousel-item">
+                    <a href="https://i.kym-cdn.com/entries/icons/original/000/025/294/hrd.png" target="_blank">
+                    <img class="d-block w-100" src="https://i.kym-cdn.com/entries/icons/original/000/025/294/hrd.png" alt="First slide">
+                    </a>
+                    <h2>Test</h2>
+                </div>
+                </div>
+                <a class="carousel-control-prev" id="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" id="carousel-control-next"href="#carouselExampleControls" role="button" data-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="sr-only">Next</span>
+                </a>
+              </div>
+            </div>
+                <div class="card-footer text-muted">
+              2 days ago
+            </div>
+          </div>
+
+        <p id="button" style="display: none;"><button class="btn btn-info btn-lg" id='signin'>Sign in with Twitch!</button></p>
+        <div class="heart-shape" id="donate" title="Donate <3"></div>
+
         
 
     </body>
