--- a/src/options.html
+++ b/src/options.html
@@ -3,7 +3,7 @@
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
-        <title>MonkaTOS Twitch Log-in</title>
+        <title>MonkaTOS Tutorial</title>
     </head>
     <body>
         <div class="card text-center centered" style="height: 32rem; width: 42rem">
