Added error message if failed to log in

--- a/src/popup.html
+++ b/src/popup.html
@@ -17,6 +17,7 @@
     </head>
 
     <body>
+        <p id="error" style="display:none">Something went wrong trying to log you in. Please reopen this menu.</p>
         <div id="profile" style="display:none; padding: 5px;">
             <img id="image" class="rounded left" style="height: 50px; width: 50px; border-radius: 5px; display: flex; float: left;">
             <strong><p id="user" style="display: inline-block; color: white;">Username Here</p></strong>
