--- a/src/popup.html
+++ b/src/popup.html
@@ -35,7 +35,7 @@
             <div class="progress" id="xpbar" style="display:none">
                 <div class="progress-bar" id="xp" role="progressbar" aria-valuenow="70"
                 aria-valuemin="0" aria-valuemax="100" style="width:70%" padding>
-                Level 5 (356/764XP)
+                <small id="xp" class="justify-content-center d-flex position-absolute w-100"></small>
                 </div>
             </div>
         </div>
