linter was yelling at the heart symbol. weirdchamp

--- a/src/options.html
+++ b/src/options.html
@@ -9,7 +9,7 @@
         <div class="card text-center centered" style="height: 32rem; width: 42rem">
             
             <div class="card-body">
-              <h5 class="card-title">TwitchTOS Quick Tutorial</h5>
+              <h5 class="card-title">MonkaTOS Quick Tutorial</h5>
               <div id="carouselExampleControls" class="carousel slide" data-interval="false" data-keyboard="true">
 
                 <div class="carousel-inner" >
@@ -54,7 +54,7 @@
               
             </div>
                 <div class="card-footer text-muted">
-              Made with love by PentalexLive <3
+              Made with love by PentalexLive &lt;3
             </div>
             <a class="carousel-control-prev" id="carousel-control-prev"style="padding-right: 75px" href="#carouselExampleControls" role="button" data-slide="prev">
               <span class="carousel-control-prev-icon" aria-hidden="true"></span>
