Added ACTUAL support for beta testing

--- a/src/options.html
+++ b/src/options.html
@@ -69,8 +69,10 @@
 
         <p id="button" style="display: none;"><button class="btn btn-info btn-lg" id='signin'>Sign in with Twitch!</button></p>
         <div class="heart-shape" id="donate" title="Donate <3"></div>
-
-        
+        <div class="form-check center">
+          <input type="checkbox" class="form-check-input" id="badgetoggle">
+          <label class="form-check-label" for="exampleCheck1" style="padding-top: 2px;">Disable MonkaTOS badges in Twitch chat</label>
+        </div>
 
     </body>
 </html>
