--- a/src/popup.html
+++ b/src/popup.html
@@ -4,10 +4,10 @@
         <title>Cool Popup</title>
         <style>
          body {
-             min-width: 220px;
-             max-width: 220px;
-             min-height: 80px;
-             max-height: 80px;
+            min-width: 300px;
+             max-width: 300px;
+             min-height: 120px;
+             max-height: 120px;
          }
          #button {
             white-space: nowrap;
@@ -29,7 +29,7 @@
             <button id="logout" type="button" class="btn btn-default btn-sm" style="padding-top: 5px;">
                 <i class="fa fa-sign-out" style="font-size:12px"></i> Sign out
             </button>
-            <img id="badge" style="float:right; padding-top:12px">
+            <img id="badge" title="Your badge!" style="float:right; padding-top:12px">
             
         </div>
         <div style="padding: 5px">
